fix horizontal scrolling in overflowing channel list view

--- a/contentcuration/contentcuration/static/less/channel_create.less
+++ b/contentcuration/contentcuration/static/less/channel_create.less
@@ -28,8 +28,8 @@ body {
 			flex: 1;
 
 			#channel_list_wrapper {
-				display: flex;
-				justify-content: center;
+				display: grid;
+				justify-content: normal;
 			}
 
 			#channel_preview_wrapper {
@@ -63,7 +63,7 @@ body {
 		}
 	}
 }
-// end of flexbox settings.
+// end of flexbox settings
 
 .default-item{
 	color:gray;
